16803
```scala
object Test extends App {
  println(s"""something like this
```
```scala
C:\Projects\Kepler\sandbox\Test.scala:2: error: unclosed multi-line string literal
  println(s"""something like this
           ^
^C
```
